tree-sitter-verse/test/corpus/strings.txt
===============================
Character (ASCII)
===============================

'a'

---

(source_file
  (char))

===============================
Empty string
===============================

""

---

(source_file
  (string))

===============================
Simple string
===============================

"Simple String"

---

(source_file
  (string
    (string_fragment)))

===============================
String quote escaping
===============================

"\"Quoted\""
"Quote < \"Some content\" >"

---

(source_file
  (string
    (string_fragment
      (escape_sequence)
      (escape_sequence)))
  (string
    (string_fragment
      (escape_sequence)
      (escape_sequence))))

===============================
Singleline comment format in strings
===============================

"Before #"
"#"
"# Start"
"Before # After"

---

(source_file
  (string
    (string_fragment))
  (string
    (string_fragment))
  (string
    (string_fragment))
  (string
    (string_fragment)))

===============================
Incomplete strings
===============================

"No ending quote
11

"Another not ending

---

(source_file
  (string
    (string_fragment))
  (integer)
  (string
    (string_fragment)))

===============================
String templates
===============================

"Before {1}"
"{1}"
"{1} Start"
"Before {1} After"

---

(source_file
  (string
    (string_fragment)
    (string_template
      (integer)))
  (string
    (string_template
      (integer)))
  (string
    (string_template
      (integer))
    (string_fragment))
  (string
    (string_fragment)
    (string_template
      (integer))
    (string_fragment)))

===============================
\{ in strings
===============================

"Escaped \{1\} test"

---

(source_file
  (string
    (string_fragment
      (escape_sequence)
      (escape_sequence))))

